// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integrations/react-in-app generator should generate demo component without MUI dependencies 1`] = `
"import { qwikVite } from '@builder.io/qwik/optimizer';
import { qwikCity } from '@builder.io/qwik-city/vite';
import { defineConfig } from 'vite';
import tsconfigPaths from 'vite-tsconfig-paths';
import { qwikNxVite } from 'qwik-nx/plugins';
import { qwikReact } from '@builder.io/qwik-react/vite';
export default defineConfig({
  cacheDir: '../../node_modules/.vite/apps/myapp',
  plugins: [
    qwikNxVite(),
    qwikCity(),
    qwikVite({
      client: {
        outDir: '../../dist/apps/myapp/client',
      },
      ssr: {
        outDir: '../../dist/apps/myapp/server',
      },
    }),
    tsconfigPaths({ root: '../../' }),
    qwikReact(),
  ],
  server: {
    fs: {
      // Allow serving files from the project root
      allow: ['../../'],
    },
  },
  preview: {
    headers: {
      'Cache-Control': 'public, max-age=600',
    },
  },
  test: {
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest',
    },
    environment: 'node',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
  },
});
"
`;

exports[`integrations/react-in-app generator should generate demo component without MUI dependencies 2`] = `
Array [
  Object {
    "path": ".prettierignore",
    "type": "CREATE",
  },
  Object {
    "path": ".prettierrc",
    "type": "CREATE",
  },
  Object {
    "path": "apps/.gitignore",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/.eslintrc.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/.prettierignore",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/package.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/project.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/public/favicon.svg",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/public/manifest.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/public/robots.txt",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/README.md",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/header/header.,",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/header/header.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/icons/qwik.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/router-head/router-head.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/entry.dev.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/entry.preview.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/entry.ssr.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/global.,",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/integrations/react/demo.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/root.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/flower/flower.,",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/flower/index.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/index.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/layout.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/react/index.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/service-worker.ts",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/tsconfig.app.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/tsconfig.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/tsconfig.spec.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/vite.config.ts",
    "type": "CREATE",
  },
  Object {
    "path": "libs/.gitignore",
    "type": "CREATE",
  },
  Object {
    "path": "nx.json",
    "type": "CREATE",
  },
  Object {
    "path": "package.json",
    "type": "CREATE",
  },
  Object {
    "path": "tsconfig.base.json",
    "type": "CREATE",
  },
]
`;

exports[`integrations/react-in-app generator should run successfully 1`] = `
"import { qwikVite } from '@builder.io/qwik/optimizer';
import { qwikCity } from '@builder.io/qwik-city/vite';
import { defineConfig } from 'vite';
import tsconfigPaths from 'vite-tsconfig-paths';
import { qwikNxVite } from 'qwik-nx/plugins';
import { qwikReact } from '@builder.io/qwik-react/vite';
export default defineConfig({
  cacheDir: '../../node_modules/.vite/apps/myapp',
  plugins: [
    qwikNxVite(),
    qwikCity(),
    qwikVite({
      client: {
        outDir: '../../dist/apps/myapp/client',
      },
      ssr: {
        outDir: '../../dist/apps/myapp/server',
      },
    }),
    tsconfigPaths({ root: '../../' }),
    qwikReact(),
  ],
  server: {
    fs: {
      // Allow serving files from the project root
      allow: ['../../'],
    },
  },
  preview: {
    headers: {
      'Cache-Control': 'public, max-age=600',
    },
  },
  test: {
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest',
    },
    environment: 'node',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
  },
});
"
`;

exports[`integrations/react-in-app generator should run successfully 2`] = `
Array [
  Object {
    "path": ".prettierignore",
    "type": "CREATE",
  },
  Object {
    "path": ".prettierrc",
    "type": "CREATE",
  },
  Object {
    "path": "apps/.gitignore",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/.eslintrc.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/.prettierignore",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/package.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/project.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/public/favicon.svg",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/public/manifest.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/public/robots.txt",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/README.md",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/header/header.,",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/header/header.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/icons/qwik.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/components/router-head/router-head.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/entry.dev.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/entry.preview.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/entry.ssr.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/global.,",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/integrations/react/mui.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/root.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/flower/flower.,",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/flower/index.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/index.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/layout.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/react/index.tsx",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/src/routes/service-worker.ts",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/tsconfig.app.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/tsconfig.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/tsconfig.spec.json",
    "type": "CREATE",
  },
  Object {
    "path": "apps/myapp/vite.config.ts",
    "type": "CREATE",
  },
  Object {
    "path": "libs/.gitignore",
    "type": "CREATE",
  },
  Object {
    "path": "nx.json",
    "type": "CREATE",
  },
  Object {
    "path": "package.json",
    "type": "CREATE",
  },
  Object {
    "path": "tsconfig.base.json",
    "type": "CREATE",
  },
]
`;
